--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^7.4.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~54.0.10",
+    "expo-asset": "~12.0.9",
+    "expo-file-system": "~19.0.15",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
