--- a/app.json
+++ b/app.json
@@ -4,17 +4,15 @@
     "slug": "fountofhope-bible",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/foh-512x512.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/foh-512x512.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -23,19 +21,16 @@
       "versionCode": 1,
       "permissions": [],
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/foh-512x512.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/foh-512x512.png"
     },
-    "plugins": [
-      "expo-sqlite",
-      "expo-asset"
-    ],
+    "plugins": ["expo-sqlite", "expo-asset"],
     "extra": {
       "eas": {
         "projectId": "64ac7b76-ad33-46ee-8fe5-584bb3befcd1"
