--- a/app.json
+++ b/app.json
@@ -12,7 +12,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -30,7 +32,11 @@
     "web": {
       "favicon": "./assets/foh-512x512.png"
     },
-    "plugins": ["expo-sqlite", "expo-asset"],
+    "plugins": [
+      "expo-sqlite",
+      "expo-asset",
+      "expo-font"
+    ],
     "extra": {
       "eas": {
         "projectId": "64ac7b76-ad33-46ee-8fe5-584bb3befcd1"
