--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "@types/react-native-vector-icons": "^6.4.18",
-    "expo": "~54.0.11",
+    "expo": "^54.0.12",
     "expo-asset": "~12.0.9",
     "expo-file-system": "~19.0.16",
     "expo-font": "~14.0.8",
