--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Fount of Hope Bible",
     "slug": "fountofhope-bible",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/fountofhope-512x512.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
@@ -19,24 +19,35 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.fountofhope.fountofhopebible",
-      "versionCode": 1,
-      "permissions": [],
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/fountofhope-512x512.png",
-        "backgroundColor": "#ffffff"
+      "softwareKeyboardLayoutMode": "resize",
+      "navigationBar": {
+        "visible": false,
+        "backgroundColor": "#1e40af",
+        "package": "com.fountofhope.fountofhopebible",
+        "versionCode": 1,
+        "permissions": [],
+        "adaptiveIcon": {
+          "foregroundImage": "./assets/fountofhope-512x512.png",
+          "backgroundColor": "#ffffff"
+        },
+        "edgeToEdgeEnabled": true,
+        "predictiveBackGestureEnabled": false
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "web": {
+        "favicon": "./assets/fountofhope-512x512.png"
+      },
+      "plugins": [
+        "expo-sqlite",
+        "expo-asset",
+        "expo-font"
+      ],
+      "extra": {
+        "eas": {
+          "projectId": "64ac7b76-ad33-46ee-8fe5-584bb3befcd1"
+        }
+      },
+      "package": "com.fountofhope.fountofhopebible"
     },
-    "web": {
-      "favicon": "./assets/fountofhope-512x512.png"
-    },
-    "plugins": [
-      "expo-sqlite",
-      "expo-asset",
-      "expo-font"
-    ],
     "extra": {
       "eas": {
         "projectId": "64ac7b76-ad33-46ee-8fe5-584bb3befcd1"
