--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@react-navigation/stack": "^7.4.8",
     "@shopify/react-native-skia": "^2.2.12",
     "@types/react-native-vector-icons": "^6.4.18",
-    "expo": "^54.0.12",
+    "expo": "^54.0.13",
     "expo-asset": "~12.0.9",
-    "expo-file-system": "~19.0.16",
-    "expo-font": "~14.0.8",
+    "expo-file-system": "^19.0.17",
+    "expo-font": "^14.0.9",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
