--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-asset": "~12.0.9",
     "expo-file-system": "^19.0.17",
     "expo-font": "^14.0.9",
+    "expo-navigation-bar": "~5.0.8",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
