--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "expo": "^54.0.13",
     "expo-asset": "~12.0.9",
     "expo-file-system": "^19.0.17",
-    "expo-font": "^14.0.9",
+    "expo-font": "~14.0.9",
     "expo-navigation-bar": "~5.0.8",
+    "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
